fix for name changes

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "browser": "client.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "release": "npm-release patch -m \"version++\""
   },
   "repository": {
     "type": "git",
@@ -24,5 +25,8 @@
   "dependencies": {
     "underscore": "^1.6.0",
     "backbone-validation": "^0.9.1"
+  },
+  "devDependencies": {
+    "npm-release": "0.0.4-3"
   }
 }
