--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ciab-validation",
-  "version": "0.9.4",
-  "description": "coopinabox validation wrapper for backbone/bookshelf",
+  "version": "0.1.0",
+  "description": "Coop-in-a-Box validation wrapper for backbone/bookshelf",
   "main": "server.js",
   "browser": "client.js",
   "scripts": {
@@ -19,8 +19,8 @@
   },
   "homepage": "https://github.com/coopinabox/validation",
   "peerDependencies": {
-    "ciab-backbone": "^0.5.0",
-    "ciab-bookshelf": "^0.6.8"
+    "ciab-backbone": "^0.1.0",
+    "ciab-bookshelf": "^0.1.0"
   },
   "dependencies": {
     "underscore": "^1.6.0",
